# ER_Torrent_Fixer

./: .gitignore  DEVELOPMENT.md  Elden Ring Save Fixer.spec  README.md  elden_ring_save_fixer.manifest  elden_ring_save_fixer_gui.py  elden_ring_save_parser.py  elden_ring_torrent_fixer.py  pyproject.toml  version_info.txt
.github/workflows/: checks.yml  ci.yml
scripts/: er_save_fixer_gui_entry.py
src/er_save_fixer/: __init__.py  cli.py  gui.py  legacy_parser.py  parser.py  save_parser.py  test_parser.py
src/er_save_fixer/parser/: __init__.py  character.py  equipment.py  er_types.py  save.py  user_data_10.py  user_data_x.py  world.py
